feat: add rag trace and interview prep updates